# ace

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/ace/: __init__.py  config.py  db.py
src/ace/app/: web.py
src/ace/ingest/: download.py  load.py  schema.py
src/ace/llm/: agent.py  client.py
src/ace/tools/: definitions.py  dispatch.py  queries.py
