[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ace"
version = "0.1.0"
description = "Ace: a tennis intelligence assistant powered by retrieval and tool use."
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "requests>=2.31",
    "streamlit",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]